...
      },
    );

    final router = ref.watch(routerProvider);

    return MaterialApp.router(
      title: 'feels',
      debugShowCheckedModeBanner: false,
      theme: feelsTheme(),
      scaffoldMessengerKey: feelsScaffoldMessengerKey,
      scrollBehavior: const _FeelsScrollBehavior(),
      routerConfig: router,
    );
...
